[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scripts/Snake.gd" type="Script" id=1]
[ext_resource path="res://Tiles/light.png" type="Texture" id=2]
[ext_resource path="res://Tiles/SpriteSheetMonsters/Snake Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://Scnes/Enemies/StateMachine.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 96, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Walking",
"speed": 6.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=25]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_walk"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.922, 1 ), Vector2( 1.2, 1 ), Vector2( 1.4, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 2.6875, 5.5 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 63.5, 8 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 3, 5.5625 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 7, 4.5 )

[node name="Snake" type="KinematicBody2D"]
position = Vector2( 502, 174 )
collision_layer = 4
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 21 )
animation = "Attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 25 )
anims/Walking = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0.5, 11.5 )
polygon = PoolVector2Array( 0.5, -4.5, 2.5, -4.5, 4.5, -3.5, 5.5, -2.5, 5.5, 0.5, 1.5, 4.5, -7.5, 4.5, -7.5, 3.5, -6.5, 2.5, -4.5, 0.5 )

[node name="Light2D3" type="Light2D" parent="."]
light_mask = 3
scale = Vector2( 0.205078, 0.191406 )
texture = ExtResource( 2 )
mode = 2
__meta__ = {
"_edit_lock_": true
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 10, 0 )
enabled = true
collision_mask = 5

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 8.3125, 7.5 )
shape = SubResource( 23 )

[node name="SeePlayerInRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeePlayerInRange"]
modulate = Color( 58.38, 0.06, 0, 1 )
position = Vector2( 10.5, 8 )
shape = SubResource( 27 )

[node name="AttackPlayer" type="Area2D" parent="."]
modulate = Color( 0.137255, 0.372549, 1, 1 )
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackPlayer"]
position = Vector2( 7, 7 )
shape = SubResource( 24 )

[node name="Deathcollison" type="Area2D" parent="."]
modulate = Color( 0.137255, 0.372549, 1, 1 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathcollison"]
modulate = Color( 0.152941, 0.423529, 0, 1 )
position = Vector2( -1, 11.5 )
shape = SubResource( 28 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_entered" from="SeePlayerInRange" to="." method="_on_SeePlayerInRange_body_entered"]
[connection signal="body_exited" from="SeePlayerInRange" to="." method="_on_SeePlayerInRange_body_exited"]
[connection signal="body_entered" from="AttackPlayer" to="." method="_on_AttackPlayer_body_entered"]
[connection signal="body_entered" from="Deathcollison" to="." method="_on_Deathcollison_body_entered"]
